2011-04-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCglue.c(emitRegularMap, emitOverlay): fixed bug 3038028
	* support/regression/tests/bug1477149.c,
	* support/regression/fwk/lib/statics.c: added s_get_indexed for bug 3038028

2011-04-23 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/lkar.c(get_member_name, fndsym_ar): small fixes
	* sdas/linksrc/lkmain.c(main): fixed bug 3290988
	* sdas/linksrc/aslink.h,
	* sdas/linksrc/lkhead.c,
	* sdas/linksrc/lkihx.c,
	* sdas/linksrc/lklex.c,
	* sdas/linksrc/lklibr.c,
	* sdas/linksrc/lklibr.h,
	* sdas/linksrc/lkmem.c,
	* sdas/linksrc/lkrel.c,
	* sdas/linksrc/lks19.c,
	* sdas/linksrc/lksym.c,
	* sdas/linksrc/sdld.c: cosmetic changes
	* sdas/linksrc/lklist.c,
	* sdas/linksrc/lknoice.c: synced with ASxxxx 5
	* src/mcs51/gen.c(genCall): fixed bug 3290691
	* support/regression/tests/bug3290691.c: new, added

2011-04-20 Borut Razem <borut.razem AT gmail.com>

	* debugger/mcs51/simi.c: fixed compiletion on Solaris

2011-04-20 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/aslink.dsp: added lksdcdb.c
	* sdas/linksrc/aslink.h,
	* sdas/linksrc/lknoice.c(NoICEfopen),
	* sdas/linksrc/lkmain.c(main): factored out NoICEfopen

2011-04-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/Makefile.in,
	* sdas/linksrc/lksdcdb.c: new, added,
	* sdas/linksrc/aslink.h,
	* sdas/linksrc/lkdata.c,
	* sdas/linksrc/lkeval.c,
	* sdas/linksrc/lklex.c,
	* sdas/linksrc/lklibr.c,
	* sdas/linksrc/lklist.c,
	* sdas/linksrc/lkmain.c: synced further with ASxxxx 5
	* sdas/linksrc/sdld.c: moved tolower
	* src/SDCCmain.c(linkEdit),
	* src/z80/main.c(_gbz80_rgblink): changed .lnk to .lk
	* lkar.c(strndup): removed static

2011-04-18 Borut Razem <borut.razem AT gmail.com>

	* lkar.c: strndup() is a GNU extension,
	  so it is defined here for all platforms

2011-04-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* lkar.c: fixed bug 3288398

2011-04-14 Maarten Brock <sourceforge.brock AT dse.nl>
